--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,6 +10,7 @@ body {
 
 .cross-row-1 {
     display: flex;
+    box-sizing: content-box;
 }
 .cross-area {
     border: 2px solid #000;
@@ -31,7 +32,6 @@ body {
 .cross-top-row {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     text-align: center;
     border-right: 1px solid #818181;
 }
@@ -166,4 +166,47 @@ body {
     left: 0;
     background: #000;
     opacity: 0.3;
+}
+
+.nono-buttons > * {
+    box-sizing: border-box;
+}
+
+.nono-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -7px 20px -7px;
+    width: 45%;
+}
+
+.nono-buttons-item {
+    width: 33.333%;
+    padding: 0 7px;
+    margin: 0 0 10px 0;
+}
+
+.nono-buttons-item span {
+    display: block;
+    cursor: pointer;
+    text-align: center;
+    border: 2px solid #fff;
+    color: #000;
+    padding: 8px 12px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    background: transparent;
+}
+
+.nono-buttons-item span:hover {
+    background-color: #ffffff;
+    border-color: #BDBDBD;
+}
+
+.nono-buttons-item .nono-buttons-empty:hover {
+    background-color: transparent;
+    border-color: #fff;
+}
+
+.nono-buttons-empty {
+    opacity: 0.7;
 }
